--- a/src/components/profile/profile.sass
+++ b/src/components/profile/profile.sass
@@ -6,12 +6,38 @@
     font-size: 14px
     font-family: 'Roboto', sans-serif
     .avatar
-        border-radius: 100%
-        border: 3px solid $lightBlue
-        float: right
-        height: 50px
-        width: auto
+        // border-radius: 100%
+        // border: 3px solid $lightBlue
+        // float: right
+        // height: 50px
+        // width: auto
+        // cursor: pointer
+
         cursor: pointer
+        float: right
+        position: relative
+        background: linear-gradient(90deg, rgba(56, 95, 102, 1) 0%, rgba(33, 144, 162, 1) 100%)
+        -webkit-border-radius:100%
+        -moz-border-radius:100%
+        padding: 1px
+        border-radius:100%
+        width:50px
+        height:50px
+
+        &::after
+            position: absolute
+            display: block
+            top: 5px
+            left: 5px
+            width: 90px
+            height: 90px
+            content: ""
+            background-color: #fff
+            background-repeat: no-repeat
+            background-size: cover
+            border-radius: 100%
+            overflow: hidden
+
     .profile-info
         overflow: hidden
         span
