--- a/src/components/scores/scores.sass
+++ b/src/components/scores/scores.sass
@@ -11,17 +11,8 @@
         display: flex
         align-items: center
     .score-grade
-        // font-size: 22px
-        // font-weight: 700
-        // margin: 5px
-        // text-align: center
-        // border-radius: 100%
-        // width: 30px
-        // height: 30px
-
         margin: 5px
         z-index: 200
-        cursor: pointer
         float: right
         position: relative
         -webkit-border-radius:100%
@@ -64,8 +55,11 @@
         font-weight: 700
         font-size: 16px
         margin: 0px 5px
+    .category-chart
+        float: left
     .category-title
         color: $lightBlue
+        font-family: "Montserrat", sans-serif
         display: flex
         margin: 10px 0px
         align-items: center
