--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -19,3 +19,16 @@ $lightBlue: #2190A2
     visibility: hidden
   &
     *zoom: 1
+
+
+@mixin for-tablets
+  @media (max-width: 1100px) 
+    @content
+
+@mixin exiting-tablets
+  @media (min-width: 800px) 
+    @content
+
+@mixin for-phone-only
+  @media (max-width: 700px) 
+    @content
