--- a/src/components/scores/scores.sass
+++ b/src/components/scores/scores.sass
@@ -85,6 +85,8 @@
         display: flex
         margin: 10px 0px
         align-items: center
+        @include for-phone-only
+            padding-bottom: 50px
         svg
             height: 35px
             width: auto
