Animations added. UX changes

--- a/src/components/coaching-info/coaching-info.sass
+++ b/src/components/coaching-info/coaching-info.sass
@@ -2,6 +2,8 @@
     
 .coaching-infobox
     float: left
+    transition: 1s ease
+    opacity: 1
     margin: 25px 0px
     font-family: Calibri, sans-serif
     display: flex
