--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -32,3 +32,18 @@ $lightBlue: #2190A2
 @mixin for-phone-only
   @media (max-width: 700px) 
     @content
+
+  
+@keyframes appearAnimation
+    0%
+        margin-top: -50px
+    100%
+        margin-top: 0
+  
+@keyframes fadeInAnimation 
+    0% 
+        opacity: 0
+    
+    100% 
+        opacity: 1
+     
