--- a/src/components/scores/scores.sass
+++ b/src/components/scores/scores.sass
@@ -71,6 +71,7 @@
         right: 0
         top: 36%
         text-align: center
+        font-family: 'Montserrat', sans-serif
         p
             font-weight: 700
             color: rgba(0,0,0,.6)
@@ -104,7 +105,6 @@
         @include for-phone-only
             width: 70%
             text-align: center
-
         h3
             color: #444
             font-family: 'Roboto', sans-serif
@@ -120,14 +120,18 @@
                 color: $grey
         ol
             padding: 0px 0px 0px 15px
+            margin: 0px
             width: 200px
             @include for-tablets
                 width: auto
             li
                 color: $grey
+                margin: 5px 0px
+                font-family: 'Montserrat', sans-serif
                 font-weight: 500
             span
                 float: right
+                color: $darkBlue
         h1
             color: $lightBlue
             font-family: 'Montserrat', sans-serif
